fixed splash image issue in about component fixed item spacing and alignment in shop component added more styling to shop page removed link tag from shop carousel added more products to json

--- a/hb/src/About.css
+++ b/hb/src/About.css
@@ -32,8 +32,7 @@ p {
 }
 
 .storeimage {
-  display: block;
-  height: 50vw;
-  margin: auto;
-  width: 100vw;
+  /* background-position: inherit; */
+  height: auto;
+  max-width: 100%;
 }
